tests/ui/fail/tuple_struct_not_supported.rs
use field_accessor::FieldAccessor;

#[derive(FieldAccessor)]
struct Wrapper(u32);

fn main() {}
