tests/ui/fail/tuple_struct_not_supported.stderr
error: proc-macro derive panicked
 --> tests/ui/fail/tuple_struct_not_supported.rs:3:10
  |
3 | #[derive(FieldAccessor)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: Only NamedFields is supported
